<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <LinearLayout
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:background="#000"
    	android:orientation="horizontal">
    	
 			 <Button
		        android:id="@+id/Back1"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
				android:layout_weight="4"
		        android:background="#008000"
		        android:text="@string/Back" />			
 			
 			<Button
		        android:id="@+id/Home1"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:paddingLeft="10dp"
		        android:layout_weight="1"
				android:background="#008000"
		        android:text="@string/Home"/>
	   </LinearLayout> 
	   
    <TextView
        android:id="@+id/Text2"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:background="#000"
        android:gravity="center|center"
        android:textSize="26dp"
        android:textColor="#fff"
        android:paddingTop="5dp"/>
        
    
    
    
    <Button 
        android:id="@+id/Galeria"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:paddingTop="15dp"
        android:text="@string/Galeria"/>
    
    <Button 
        android:id="@+id/Mapa"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:paddingTop="15dp"
        android:text="@string/Mapa"/>
    
    <Button 
        android:id="@+id/AR"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:paddingTop="15dp"
        android:text="@string/AR"/>
    
    <Button 
        android:id="@+id/Camara"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:paddingTop="15dp"
        android:text="@string/Camara"/>

   
    </LinearLayout>
