<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.turicangas.Opciones" >

   <TextView
        android:id="@+id/Text2"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:background="#000"
        android:drawableLeft="@drawable/ic_launcher"
        android:gravity="center_vertical"
        android:textSize="26dp"
        android:textColor="#fff"
        android:paddingTop="5dp" />
    

    <Button 
        android:id="@+id/Galeria"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:drawableRight="@drawable/ic_launcher"
        android:gravity="left"
        android:textSize="22dp"
        android:paddingTop="15dp"
        android:text="@string/Galeria"/>
    
    <Button 
        android:id="@+id/Mapa"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:drawableLeft="@drawable/ic_launcher"
        android:gravity="right"
        android:textSize="22dp"
        android:paddingTop="15dp"
        android:text="@string/Mapa"/>
    
    <Button 
        android:id="@+id/AR"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:drawableRight="@drawable/ic_launcher"
        android:gravity="left" 
        android:textSize="22dp"
        android:paddingTop="15dp"
        android:text="@string/AR"/>
    
    <Button 
        android:id="@+id/Camara"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:drawableLeft="@drawable/ic_launcher"
        android:gravity="right" 
        android:textSize="22dp"
        android:paddingTop="15dp"
        android:text="@string/Camara"/>

</LinearLayout>
